fix AXE color contrast warning to not use gray

--- a/src/scenes/ServiceMembers/NameForm.css
+++ b/src/scenes/ServiceMembers/NameForm.css
@@ -1,5 +1,4 @@
 .label-optional {
-	color: rgb(153,153,153);
 	font-size: .9em;
 	float: right;
 }
